--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@ Home</title>
 <body>
   <main>
      <header>
-    <h1>Malik Design</h1>
+    <h1>Malik Designs</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -19,14 +19,40 @@ Home</title>
   </header>
 
   <main>
-    <h2>Welcome to Malik Design</h2>
+     <section class="home_image">
+    <h2>Welcome to Malik Designs</h2>
     <p>Innovative interior design solutions for modern living and workspaces.</p>
     <p>Helping you create beautiful spaces that feel like home.</p>
       <button>Book a Consultation</button>
+       
+      <h2 class='gallery'>Gallery</h2>
+     
+      <p><div class="galleryfilters">
+        <button onclick="filterGallery('all')">All Designs</button> </p> 
+        <button onclick="filterGallery('commercial')">Commercial Designs</button>
+   <button onclick="filterGallery('home')">Home Designs</button> </p> 
+   </div>
+
+    <div class="gallerygrid">
+    <div class="galleryitem commercial">
+      <img src= "https://thumbs.dreamstime.com/b/background-image-meeting-room-modern-office-interior-design-aigt-spacious-lobby-seating-area-decor-contemporary-324934485.jpg?w=992" alt="Commercial Design 1">
+    </div>
+    <div class="galleryitem commercial">
+      <img src="https://thumbs.dreamstime.com/b/modern-office-interior-13654524.jpg?w=768" alt="Commercial Design 2">
+    </div>
+    <div class="galleryitem home">
+      <img src="https://plus.unsplash.com/premium_photo-1676823547752-1d24e8597047?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Home Design 1">
+    </div>
+    <div class="galleryitem home">
+      <img src=https://images.unsplash.com/photo-1616046229478-9901c5536a45?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="Home Design 2">
+    </div>
+  </div>
+</section>
+      </section>
   </main>
 
   <footer>
-    <p>© 2025 Malik Design</p>
+    <p>© 2025 Malik Designs</p>
   </footer>
     <script src="javascript.js"></script>
 </body>
