About and Contact Pages
-Added content and image in about page
-Added call button and form submission button in contact page
-Added images to both pages
- Added stylistic and functionality features
-Changed 'orders' to 'contact'

--- a/home.html
+++ b/home.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <title>Malik Design
-Home</title>
+  <title>Malik Designs</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,15 +14,16 @@ Home</title>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
       <a href="blog.html">Blog</a>
+
     </nav>
   </header>
 
   <main>
-     <section class="home_image">
+     <section class="homeimage">
     <h2>Welcome to Malik Designs</h2>
-    <p>Innovative interior design solutions for modern living and workspaces.</p>
+    <p>Slick and innovative interior design solutions for modern living and workspaces</p>
     <p>Helping you create beautiful spaces that feel like home.</p>
-      <button>Book a Consultation</button>
+      <button>BOOK A CONSULTATION</button>
        
       <h2 class='gallery'>Gallery</h2>
      
@@ -36,14 +36,10 @@ Home</title>
     <div class="gallerygrid">
     <div class="galleryitem commercial">
       <img src= "https://thumbs.dreamstime.com/b/background-image-meeting-room-modern-office-interior-design-aigt-spacious-lobby-seating-area-decor-contemporary-324934485.jpg?w=992" alt="Commercial Design 1">
-    </div>
-    <div class="galleryitem commercial">
       <img src="https://thumbs.dreamstime.com/b/modern-office-interior-13654524.jpg?w=768" alt="Commercial Design 2">
     </div>
     <div class="galleryitem home">
       <img src="https://plus.unsplash.com/premium_photo-1676823547752-1d24e8597047?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Home Design 1">
-    </div>
-    <div class="galleryitem home">
       <img src=https://images.unsplash.com/photo-1616046229478-9901c5536a45?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="Home Design 2">
     </div>
   </div>
