--- a/Contact.html
+++ b/Contact.html
@@ -28,11 +28,11 @@
 
    
     <main>
-    <section class="contact-section">
+    <section class="contactsection">
   <p>Get in touch with Malik Designs</p>
 
  
-  <a href="tel:+61234567890" class="contact-btn">Call Us - Tel:+61234567890</a>
+  <a href="tel:+61234567890" class="contactbtn">Call Us - Tel:+61234567890</a>
   <p>Alternatively: Fill out the form below to reach Malik Designs</p>
 
   <form id="contactForm">
@@ -46,3 +46,6 @@
     <script src="javascript.js"></script>
 </body>
 </html>
+  <footer>
+    <p>© 2025 Malik Designs</p>
+  </footer>
