--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <h2>Welcome to Malik Designs</h2>
     <p>Slick and innovative interior design solutions for modern living and workspaces</p>
     <p>Helping you create beautiful spaces that feel like home.</p>
-      <button>BOOK A CONSULTATION</button>
+      <button onclick = "alert('Consult booking coming soon!')">BOOK A CONSULTATION</button>
        
       <h2 class='gallery'>Gallery</h2>
      
