--- a/about.html
+++ b/about.html
@@ -28,11 +28,14 @@
 
    
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
-
+        <p>Details about Malik Design's vision, values and services.</p>
        
       </aside>
 
     </main>
 </body>
 </html>
+    <footer>
+        <p>© 2025 Malik Designs</p>
+    </footer>
+        <script src="javascript.js"></script>
