--- a/Contact.html
+++ b/Contact.html
@@ -31,7 +31,7 @@
     <section class="contactsection">
   <p>Get in touch with Malik Designs</p>
 
-  <a href="tel:+61234567890" class="contactbtn">Call Us - Tel:+61234567890</a>
+  <button onclick="window.location.href='tel:+61234567890'">Call Us - Tel:+61 234 567 890</button>
 
   <p>Alternatively: Fill out the form below to reach Malik Designs</p>
   <form id="contactForm">
