--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 <section class="contactimage">
-    <img id="contact-img" src="https://media.licdn.com/dms/image/v2/D4D12AQFSTcGUV1NIpg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1683030105064?e=2147483647&v=beta&t=R5Jg_WN4KvISC9_jG3s1wu2oLniE-HZ3MxIbzSEVSIo" alt="Contact" >
+    <img src="https://media.licdn.com/dms/image/v2/D4D12AQFSTcGUV1NIpg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1683030105064?e=2147483647&v=beta&t=R5Jg_WN4KvISC9_jG3s1wu2oLniE-HZ3MxIbzSEVSIo" alt="Contact" >
     </section>
  
 
