--- a/Services.html
+++ b/Services.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 <section class="servicesimage">
-    <img id="about-img" src="https://5.imimg.com/data5/SELLER/Default/2022/10/KF/JD/VW/152438627/commercial-interior-designer-2--500x500.jpeg" >
+    <img src="https://5.imimg.com/data5/SELLER/Default/2022/10/KF/JD/VW/152438627/commercial-interior-designer-2--500x500.jpeg" >
     </section>
  
 
