--- a/home.html
+++ b/home.html
@@ -45,6 +45,29 @@
   </div>
 </section>
       </section>
+   <section class="testimonials">
+  <h2>What Our Clients Say</h2>
+
+  <div class="testimonialcontainer">
+    <div class="testimonialactive">
+      <p>"Malik ...."</p>
+      <h4>- S</h4>
+    </div>
+    <div class="testimonial">
+      <p>"Malik was ...."</p>
+      <h4>- D</h4>
+    </div>
+    <div class="testimonial">
+      <p>"Malik is..."</p>
+      <h4>- E</h4>
+    </div>
+  </div>
+
+  <div class="testimonialbuttons">
+    <button id="prevBtn">&#8592; Previous</button>
+    <button id="nextBtn">Next &#8594;</button>
+  </div>
+</section>   
   </main>
 
   <footer>
