--- a/Contact.html
+++ b/Contact.html
@@ -35,9 +35,9 @@
 
   <p>Alternatively: Fill out the form below to reach Malik Designs</p>
   <form id="contactForm">
-    <input type="text" id="name" placeholder="Your Name" required><br>
-    <input type="email" id="email" placeholder="Your Email" required><br>
-    <textarea id="message" placeholder="Your Message" required></textarea><br>
+    <input type="text" id="contactname" placeholder="Your Name" required><br>
+    <input type="email" id="contactemail" placeholder="Your Email" required><br>
+    <textarea id="contactmessage" placeholder="Your Message" required></textarea><br>
     <button type="submit">Submit</button>
   </form>
 </section>
